force-app/main/default/objects/Booking_Field_Response__c/Booking_Field_Response__c.object-meta.xml
<CustomObject>
    <description>Stores a bookers response to a custom booking field</description>
    <label>Booking Field Response</label>
    <nameField>
        <displayFormat>BFR-{00000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Field Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>