force-app/main/default/objects/Booking_Field_Response__c/fields/Booking_Field__c.field-meta.xml
<CustomField>
    <fullName>Booking_Field__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Booking Field</label>
    <referenceTo>Booking_Field__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>