force-app/main/default/objects/Booking_Field_Response__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>